--- a/templates/link.html
+++ b/templates/link.html
@@ -1,3 +1,4 @@
+<link rel="icon" href="../static/images/paw.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 <link rel="stylesheet" href="../../static/css/main.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
