--- a/templates/pet.html
+++ b/templates/pet.html
@@ -29,21 +29,21 @@
 		                    <p><strong>Your information:</strong></p>
 		                    <div class="row">
 		                        <div class="input-field col s6">
-		                            <input id="first_name" name="first_name" type="text" class="validate">
+		                            <input id="first_name" name="first_name" type="text" class="validate" required>
 		                            <label for="first_name">First Name</label>
 		                        </div>
 		                        <div class="input-field col s6">
-		                            <input id="last_name" name="last_name" type="text" class="validate">
+		                            <input id="last_name" name="last_name" type="text" class="validate" required>
 		                            <label for="last_name">Last Name</label>
 		                        </div>
 		                    </div>
 		                    <div class="row">
 		                        <div class="input-field col s6">
-		                            <input id="email" name="email" type="email" class="validate">
+		                            <input id="email" name="email" type="email" class="validate" required>
 		                            <label for="email">Email Address</label>
 		                        </div>
 		                        <div class="input-field col s6">
-		                            <input id="phone" name="phone" type="text" class="validate">
+		                            <input id="phone" name="phone" type="text" class="validate" required>
 		                            <label for="phone">Phone Number</label>
 		                        </div>
 		                    </div>
@@ -84,7 +84,7 @@
 		                    <div class="row">
 		                    	<div class="col s12">
 		                    		<p>Why do you want to adopt {{pet.name}}?</p>
-		                    		<textarea id="why_adopt" name="why_adopt" class="materialize-textarea"></textarea>
+		                    		<textarea id="why_adopt" name="why_adopt" class="materialize-textarea" required></textarea>
 		                    	</div>
 		                    </div>
 		                    <div class="row">
