--- a/templates/login.html
+++ b/templates/login.html
@@ -27,6 +27,7 @@
                     </div>
                 </div>
                 <div class="card-action right-align">
+                    <a class="btn waves-effect waves-light blue darken-3" href="/main">Browse</a>
                     <input type="submit" class="btn waves-effect waves-light blue darken-3" value="Login">
                     <br />
                     <br /> No Account? <a href="/signup"> Sign Up Today!</a>
