--- a/templates/main.html
+++ b/templates/main.html
@@ -9,71 +9,59 @@
 </head>
 <body>
     <div id="map"></div>
-    <div id="legend"><h5>Legend</h5></div>
-    <div class="container">
-      
-      <div class="row col s12" overflow-x: auto;" style="padding-top: 20px;">        
+    <div id="legend">
+        <h5>Legend</h5></div>
+    <div class="container" style="padding-top: 20px;">
         <ul class="tabs center">
-          <li class="tab col s3"><a class="active" href="#dog-parks">Doggie Parks</a></li>
-          <li class="tab col s3"><a href="#animal-shelters">Animal Shelters</a></li>
+            <li class="tab col s3"><a class="active" href="#dog-parks">Doggie Parks</a></li>
+            <li class="tab col s3"><a href="#animal-shelters">Animal Shelters</a></li>
         </ul>
-        <div id="dog-parks" class="col s12">
-          {% for park in parks %}
-          <div class="col s3">
-            <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="{{park.picture}}" width="100%" height="auto">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">
-                  {{park.name}}<i class="material-icons right">more_vert</i>
-                </span>
-                <address>{{park.address}}</address>
-                <br/>
-                {% for r in range(park.rating|int) %}
-                  <i class="material-icons #c62828 red-text text-darken-2">favorite</i>
+        <div class="row col s12" overflow-x: auto;>
+            <div id="dog-parks" class="col s12">
+                {% for park in parks %}
+                <div class="col s3">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="{{park.picture}}" width="100%" height="auto">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">{{park.name}}<i class="material-icons right">more_vert</i></span>
+                            <address>{{park.address}}</address>
+                            <br/> {% for r in range(park.rating|int) %}
+                            <i class="material-icons #c62828 red-text text-darken-2">favorite</i> {% endfor %}
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">{{park.name}}<i class="material-icons right">close</i></span>
+                            <p>Phone: {{park.phone}}</p>
+                            <p>Description: {{park.description}}</p>
+                        </div>
+                    </div>
+                </div>
                 {% endfor %}
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">
-                  {{park.name}}<i class="material-icons right">close</i>
-                </span>
-                <p>Phone: {{park.phone}}</p>
-                <p>Description: {{park.description}}</p>
-              </div>
             </div>
-          </div>
-        {% endfor %}
-        </div>
-        <div id="animal-shelters" class="col s12">
-          {% for shelter in shelters %}
-          <div class="col s3">
-            <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="{{shelter.picture}}" width="100%" height="auto">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">
-                  {{shelter.name}}<i class="material-icons right">more_vert</i>
-                </span>
-                <address>{{shelter.address}}</address>
-                <br/>
-                {% for r in range(shelter.rating|int) %}
-                  <i class="material-icons #c62828 red-text text-darken-2">favorite</i>
+            <div id="animal-shelters" class="col s12">
+                {% for shelter in shelters %}
+                <div class="col s3">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="{{shelter.picture}}" width="100%" height="auto">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">{{shelter.name}}<i class="material-icons right">more_vert</i></span>
+                            <address>{{shelter.address}}</address>
+                            <br/> {% for r in range(shelter.rating|int) %}
+                            <i class="material-icons #c62828 red-text text-darken-2">favorite</i> {% endfor %}
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">{{shelter.name}}<i class="material-icons right">close</i></span>
+                            <p>Phone: {{shelter.phone}}</p>
+                            <p>Description: {{shelter.description}}</p>
+                        </div>
+                    </div>
+                </div>
                 {% endfor %}
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">
-                  {{shelter.name}}<i class="material-icons right">close</i>
-                </span>
-                <p>Phone: {{shelter.phone}}</p>
-                <p>Description: {{shelter.description}}</p>
-              </div>
             </div>
-          </div>
-        {% endfor %}
         </div>
-      </div>
     </div>
 </body>
 <script>
