--- a/static/css/main.css
+++ b/static/css/main.css
@@ -39,8 +39,24 @@ body, html {
 	font-size: 20px !important;
 	line-height: 20px !important;
 }
-.card{
-	height: 380px;
+@media only screen and (max-width: 600px) {
+   .card{
+        height: 100%;
+    } 
+}
+@media only screen and (min-width: 601px) {
+   .card{
+        height: 450px;
+    } 
+}
+@media only screen and (min-width: 991px) {
+   .card{
+        height: 400px;
+    } 
+}
+.location_ratings{
+    bottom: 0;
+    position: absolute;
 }
 .pet-cover{
     width:100%; 
