--- a/templates/admin-main.html
+++ b/templates/admin-main.html
@@ -40,7 +40,7 @@
 									<span class="title">Age: </span>{{proposal.pet_age}}<br>
 									<span class="title">Color: </span>{{proposal.pet_color}}<br>
 								</div>
-								<div class="col s9">
+								<div class="col s12 m6 l9">
 									<span class="title">Contact Number: </span>{{proposal.phone}}<br>
 									<div class="row a-row">
 										<div class="col s12 m6 l4"><span class="title">First time adopting: </span>{{proposal.first_time_adopt}}</div>
@@ -89,7 +89,7 @@
 									<span class="title">Age: </span>{{proposal.pet_age}}<br>
 									<span class="title">Color: </span>{{proposal.pet_color}}<br>
 								</div>
-								<div class="col s9">
+								<div class="col s12 m6 l9">
 									<span class="title">Contact Number: </span>{{proposal.phone}}<br>
 									<div class="row a-row">
 										<div class="col s12 m6 l4"><span class="title">First time adopting: </span>{{proposal.first_time_adopt}}</div>
