--- a/static/css/main.css
+++ b/static/css/main.css
@@ -87,31 +87,13 @@ body, html {
 .pet-pic{
     width: 100%;
     height: 200px;
-    border-radius: 10%;
 }
 .pet-ind{
     height: 300px;
-}
-.pet-pic-item {
-    width: 45px;
-    height: 45px;
-    background-image: url('../images/like.png');
-    position: relative;
-    top: -50px;
-    left: 210px;
-}
-.label {
-    position: relative;
-    top: 12px;
-    left: 11px;
-    color: black;
+    padding-top: 15px;
 }
 .facts {
     padding-right: 5%;
-}
-.p-caption{
-    position: relative;
-    top: -15%;
 }
 #adopt{
     background-image: url('../images/map-paw.png');
@@ -129,4 +111,8 @@ body, html {
     width: 150px;
     line-height: 15px;
     font-size: 12px;
+}
+.sm-text{
+    font-size: 11px;
+    font-weight: 900;
 }
