--- a/templates/home.html
+++ b/templates/home.html
@@ -12,11 +12,10 @@
 <body>
     <div class="bg">
       <div class="center home">
-        <h2>Better with Pets!</h2>
+        <h2>It's time to bring people and pets together! Life is better with pets!</h2>
         <a class="btn waves-effect waves-light blue darken-3" href="/main">Browse</a>
         <a class="btn waves-effect waves-light blue darken-3" href="/login">Admin</a>
       </div>
     </div>
-
 </body>
 </html>
