--- a/templates/main.html
+++ b/templates/main.html
@@ -22,7 +22,7 @@
                 <div class="col s12 m6 l3">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="{{park.picture}}" width="100%" height="auto">
+                            <img class="activator" src="{{park.picture}}" width="100%" height="200">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">{{park.name}}<i class="material-icons right">more_vert</i></span>
@@ -48,7 +48,7 @@
                 <div class="col s12 m6 l3">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="{{shelter.picture}}" width="100%" height="auto">
+                            <img class="activator" src="{{shelter.picture}}" width="100%" height="200">
                         </div>
                         <div class="card-content">
                             <span class="card-title activator grey-text text-darken-4">{{shelter.name}}<i class="material-icons right">more_vert</i></span>
