--- a/templates/lost-pet.html
+++ b/templates/lost-pet.html
@@ -124,7 +124,7 @@
                 <div class="card">
                     <div class="card-image">
                       <img src="{{lost_pet.picture}}">
-                      <span class="card-title black-text">{{lost_pet.name}}</span>
+                      <span class="card-title white-text">{{lost_pet.name}}</span>
                     </div>
                     <div class="card-content row">
                         <div class="col s12 m12 l12">
