--- a/templates/lost-pet.html
+++ b/templates/lost-pet.html
@@ -123,7 +123,7 @@
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
-                      <img src="{{lost_pet.picture}}">
+                      <img src="{{lost_pet.picture}}" width="100%" height="220">
                       <span class="card-title white-text">{{lost_pet.name}}</span>
                     </div>
                     <div class="card-content row">
